--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S Preller Construction</title>
+    <script type="text/javascript" src="assets/js/headerFooterManager.js"></script>
     <link href="assets/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,65 +13,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
-<body>
-    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a id="site-title" class="navbar-brand fw-bold" href="#">CONCRETE INSIGHT UK</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto me-4 mb-2 mb-lg-0">
-                    <li class="nav-item mx-1">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item dropdown mx-2 hover-underline-animation">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Concrete Coring</a></li>
-                        <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
-                        <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
-                        <li><a class="dropdown-item" href="#">Pull Testing</a></li>
-                        <li><a class="dropdown-item" href="#">Half Cell Potential Surveys</a></li>
-                    </ul>
-                    </li>
-                    <li class="nav-item dropdown mx-1 hover-underline-animation">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Non-Intrusive Surveys
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Ferroscanning</a></li>
-                            <li><a class="dropdown-item" href="#">Ground Penetrating Radar</a></li>
-                            <li><a class="dropdown-item" href="#">Defect Surveys</a></li>
-                            <li><a class="dropdown-item" href="#">Dimensional Surveys</a></li>
-                            <li><a class="dropdown-item" href="#">Rebound Hammer Surveys</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown mx-1 hover-underline-animation">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Testing
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Carbonation Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Chloride Ion Testing</a></li>
-                            <li><a class="dropdown-item" href="#">HAC Determination</a></li>
-                            <li><a class="dropdown-item" href="#">Compressive Strength Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Sulphide Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Total Alkali Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Petrographic Testing</a></li>
-                            <li><a class="dropdown-item" href="#">Cement Content</a></li>
-                            <li><a class="dropdown-item" href="#">Moisture Content</a></li>
-                            <li><a class="dropdown-item" href="#">Mixed Mortar Analysis</a></li>
-                            <li><a class="dropdown-item" href="#">Tensile Strength</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item mx-1 hover-underline-animation">
-                        <a class="nav-link" aria-current="page" href="#">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+<body class="d-flex flex-column min-vh-100">
+    <special-header></special-header>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="text-muted">© 2025 Concrete Insight UK</span>
         </div>
-        </nav>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="#">FB</li>
+          <li class="ms-3"><a class="text-muted" href="#">X</li>
+          <li class="ms-3"><a class="text-muted" href="#">Insta</li>
+        </ul>
+      </footer>
+    <!-- <special-footer></special-footer> -->
 </body>
 </html>
