--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <special-header></special-header>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-around align-items-center py-4 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
@@ -24,9 +25,9 @@
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-muted" href="#">FB</li>
-          <li class="ms-3"><a class="text-muted" href="#">X</li>
-          <li class="ms-3"><a class="text-muted" href="#">Insta</li>
+          <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
+          <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
+          <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
         </ul>
       </footer>
     <!-- <special-footer></special-footer> -->
