--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
             <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
                 <h5>Investigations, Surveys and Testing in Sussex and beyond.</h5>
                 <p>Some representative placeholder content for the first slide.</p>
             </div>
             </div>
             <div class="carousel-item">
             <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
             </div>
             <div class="carousel-item">
             <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
