fix: stop navbar misalignment

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- <special-header></special-header> -->
-            <div class="row text-center py-1" id="nav-header">
+            <div class="d-flex justify-content-center py-1" id="nav-header">
                 <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="#">CONCRETE • INSIGHT • UK</a>
             </div>
-            <div class="row">
-                <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary py-0 text-uppercase">
+                <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
                     <div class="container-fluid py-0">
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -79,7 +78,6 @@
                         </div>
                     </div>
                 </nav>
-            </div>
     <!-- Carousel -->
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade ">
         <div class="carousel-indicators">
