--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 </nav>
     <!-- Carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade ">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -94,16 +94,16 @@
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
+            <img src="assets/images/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <h5>Second slide label</h5>
+                <h5>Professional service for businesses of all sizes</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
             </div>
             <div class="carousel-item">
-            <img src="assets/images/mesmerizing-view-beautiful-seascape-surrounded-by-greenery.jpg" class="d-block w-100" alt="...">
+            <img src="assets/images/dark-extensive-stone-hall-abandoned-mine.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <h5>Third slide label</h5>
+                <h5>Open space - or confined access</h5>
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
             </div>
