--- a/index.html
+++ b/index.html
@@ -96,14 +96,16 @@
             <div class="carousel-item">
             <img src="assets/images/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <h5>Professional service for businesses of all sizes</h5>
+                <button type="button" class="btn btn-warning mb-3">Intrusive Investigations</button>
+                <!-- <h5>Professional service for businesses of all sizes</h5> -->
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
             </div>
             <div class="carousel-item">
             <img src="assets/images/dark-extensive-stone-hall-abandoned-mine.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <h5>Open space - or confined access</h5>
+                <button type="button" class="btn btn-success mb-3">Non-Intrusive Surveys</button>
+                <!-- <h5>Open space - or confined access</h5> -->
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
             </div>
