--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     <!-- <special-header></special-header> -->
             <div class="d-flex justify-content-center py-1" id="nav-header">
                 <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="#">CONCRETE • INSIGHT • UK</a>
+                <div class="navbar ms-5 d-lg-none">
+                    <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
             </div>
                 <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
                     <div class="container-fluid py-0">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                             <ul class="navbar-nav mb-2 mb-lg-0">
                                 <li class="nav-item mx-1">
                                     <a class="nav-link active p-3" aria-current="page" href="#">Home</a>
