--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
             </span>
         </button>
     </div>
+    <section id="index-information" class="py-5 row">
+        <div class="col-6"></div>
+        <div class="col-6"></div>
+    </section>
     <special-footer></special-footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="assets/js/script.js"></script>
