--- a/index.html
+++ b/index.html
@@ -125,9 +125,30 @@
             </span>
         </button>
     </div>
-    <section id="index-information" class="py-5 row">
-        <div class="col-6"></div>
-        <div class="col-6"></div>
+    <section id="index-information" class="py-5 container-fluid oswald-font">
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-10 col-lg-5 align-items-center">
+                <h2 class="text-center">Lorem Ipsum Title Text</h2>
+                <hr />
+                <p class="text-center ">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <br />
+                <ul class="index-ul text-center">
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 1, this can be a link also</li><br />
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 2, this can be a link also</li><br />
+                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 3, this can be a link also</li><br />
+                </ul>
+            </div>
+            <div class="d-none d-lg-block col-1"></div>
+            <div class="d-none d-lg-block col-lg-4 d-flex align-content-center">
+                <img class="small-image" src="assets/images/coring-2.jpeg" alt="Concrete Insight Coring Process">
+            </div>
+            <div class="col-1"></div>
+        </div>
     </section>
     <special-footer></special-footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
