--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="carousel-item">
             <img src="assets/images/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-warning mb-3">Intrusive Investigations</button>
+                <button type="button" class="btn btn-primary mb-3">Intrusive Investigations</button>
                 <!-- <h5>Professional service for businesses of all sizes</h5> -->
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
@@ -126,21 +126,21 @@
         </button>
     </div>
     <section id="index-information" class="py-5 container-fluid oswald-font">
-        <div class="row">
+        <div class="row d-flex align-items-center">
             <div class="col-1"></div>
             <div class="col-10 col-lg-5 align-items-center">
-                <h2 class="text-center">Lorem Ipsum Title Text</h2>
+                <h2 data-inviewport="fade-right" class="text-center">Lorem Ipsum Title Text</h2>
                 <hr />
-                <p class="text-center ">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                <p data-inviewport="fade-right" class="text-center ">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
                 <br />
                 <ul class="index-ul text-center">
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 1, this can be a link also</li><br />
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 2, this can be a link also</li><br />
-                    <li><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 3, this can be a link also</li><br />
+                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 1, this can be a link also</li><br />
+                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 2, this can be a link also</li><br />
+                    <li data-inviewport="fade-right"><i class="fa-solid fa-plus fa-2xl"></i>&emsp;Point 3, this can be a link also</li><br />
                 </ul>
             </div>
             <div class="d-none d-lg-block col-1"></div>
