--- a/index.html
+++ b/index.html
@@ -150,6 +150,70 @@
             <div class="col-1"></div>
         </div>
     </section>
+    <section id="index-tabs" class="py-5 px-3 container-fluid oswald-font">
+        <div class="row justify-content-evenly">
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                <div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Concrete Coring</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Dust Sampling</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Concrete Breakouts</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Pull Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Half-Cell Potential Surveys</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Ferroscanning</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <special-footer></special-footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="assets/js/script.js"></script>
