feat: add all cards to index information section

--- a/index.html
+++ b/index.html
@@ -212,6 +212,156 @@
                     </div>
                 </div>
             </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                <div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Ground Penetrating Radar</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Defect Surveys</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Dimensional Surveys</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Rebound Hammer Surveys</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Carbonation Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Chloride Ion Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">HAC Determination</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Compressive Strength Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Sulphide Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Total Alkali Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Petrographic Testing</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Cement Content</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Moisture Content</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Mixed Mortar Analysis</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+                |<div class="card text-center">
+                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Tensile Strength</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                        <a href="#" class="btn btn-dark">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <special-footer></special-footer>
