feat: reduce index page cards to six only

--- a/index.html
+++ b/index.html
@@ -151,58 +151,8 @@
         </div>
     </section>
     <section id="index-tabs" class="py-5 px-3 container-fluid oswald-font">
-        <div class="row justify-content-evenly">
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                <div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Concrete Coring</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Dust Sampling</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Concrete Breakouts</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Pull Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Half-Cell Potential Surveys</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+        <div class="row justify-content-evenly mx-3">
+            <div data-inviewport="fade-up" class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
@@ -212,7 +162,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+            <div data-inviewport="fade-up"  class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 <div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
@@ -222,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+            <div data-inviewport="fade-up"  class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
@@ -232,17 +182,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Dimensional Surveys</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+            <div data-inviewport="fade-up"  class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
@@ -252,67 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Carbonation Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Chloride Ion Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">HAC Determination</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Compressive Strength Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Sulphide Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Total Alkali Testing</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+            <div data-inviewport="fade-up"  class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
@@ -322,41 +202,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Cement Content</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Moisture Content</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
+            <div data-inviewport="fade-up"  class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
                 |<div class="card text-center">
                     <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
                     <div class="card-body">
                         <h5 class="card-title">Mixed Mortar Analysis</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                        <a href="#" class="btn btn-dark">Go somewhere</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-lg-4 col-xl-3 my-2 d-flex justify-content-center">
-                |<div class="card text-center">
-                    <i class="fa-solid fa-2xl fa-square-check mt-5 mb-3"></i>
-                    <div class="card-body">
-                        <h5 class="card-title">Tensile Strength</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
                         <a href="#" class="btn btn-dark">Go somewhere</a>
                     </div>
