feat: add intrusive investigations page, restyle carousel buttons

--- a/index.html
+++ b/index.html
@@ -20,73 +20,10 @@
      crossorigin=""></script>
     <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/headerFooterManager.js"></script>
-
+    <script type="text/javascript" src="assets/js/headManager.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <!-- <special-header></special-header> -->
-            <div class="d-flex justify-content-center py-1" id="nav-header">
-                <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="#">CONCRETE • INSIGHT • UK</a>
-                <div class="navbar ms-5 d-lg-none">
-                    <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-            </div>
-                <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
-                    <div class="container-fluid py-0">
-                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
-                            <ul class="navbar-nav mb-2 mb-lg-0">
-                                <li class="nav-item mx-1">
-                                    <a class="nav-link active p-3" aria-current="page" href="#">Home</a>
-                                </li>
-                                <li class="nav-item dropdown mx-1 hover-underline-animation">
-                                <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Concrete Coring</a></li>
-                                    <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
-                                    <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
-                                    <li><a class="dropdown-item" href="#">Pull Testing</a></li>
-                                    <li><a class="dropdown-item" href="#">Half Cell Potential Surveys</a></li>
-                                </ul>
-                                </li>
-                                <li class="nav-item dropdown mx-1 hover-underline-animation">
-                                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Non-Intrusive Surveys
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Ferroscanning</a></li>
-                                        <li><a class="dropdown-item" href="#">Ground Penetrating Radar</a></li>
-                                        <li><a class="dropdown-item" href="#">Defect Surveys</a></li>
-                                        <li><a class="dropdown-item" href="#">Dimensional Surveys</a></li>
-                                        <li><a class="dropdown-item" href="#">Rebound Hammer Surveys</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item dropdown mx-1 hover-underline-animation">
-                                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Testing
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Carbonation Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">Chloride Ion Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">HAC Determination</a></li>
-                                        <li><a class="dropdown-item" href="#">Compressive Strength Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">Sulphide Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">Total Alkali Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">Petrographic Testing</a></li>
-                                        <li><a class="dropdown-item" href="#">Cement Content</a></li>
-                                        <li><a class="dropdown-item" href="#">Moisture Content</a></li>
-                                        <li><a class="dropdown-item" href="#">Mixed Mortar Analysis</a></li>
-                                        <li><a class="dropdown-item" href="#">Tensile Strength</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
-                                    <a class="nav-link p-3" aria-current="page" href="#">Contact Us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+    <special-header></special-header>
     <!-- Carousel -->
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -105,7 +42,7 @@
             <div class="carousel-item">
             <img src="assets/images/site-engineer-construction-site.webp" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-primary mb-3">Intrusive Investigations</button>
+                <button type="button" class="btn btn-primary mb-3 CIK-button">Intrusive Investigations</button>
                 <!-- <h5>Professional service for businesses of all sizes</h5> -->
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
@@ -113,7 +50,7 @@
             <div class="carousel-item">
             <img src="assets/images/dark-extensive-stone-hall-abandoned-mine.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-block">
-                <button type="button" class="btn btn-success mb-3">Non-Intrusive Surveys</button>
+                <button type="button" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</button>
                 <!-- <h5>Open space - or confined access</h5> -->
                 <p>Some representative placeholder content for the third slide.</p>
             </div>
