--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -53,6 +54,14 @@
                 <button type="button" class="btn btn-success mb-3 CIK-button">Non-Intrusive Surveys</button>
                 <!-- <h5>Open space - or confined access</h5> -->
                 <p>Some representative placeholder content for the third slide.</p>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img src="assets/images/worker-with-gloves-holding-protective-glasses.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-block">
+                <button type="button" class="btn btn-danger mb-3 CIK-button">Testing</button>
+                <!-- <h5>Open space - or confined access</h5> -->
+                <p>Some representative placeholder content for the fourth slide.</p>
             </div>
             </div>
         </div>
