--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -25,29 +25,29 @@
 <body class="d-flex flex-column min-vh-100">
     <special-header></special-header>
         <div class="row justify-content-center service-background py-5">
-            <div class="col-11 col-lg-9 service-box">
+            <div data-inviewport="fade-up" class="col-10 col-lg-9 col-xxl-6 service-box">
                 <div class="row align-items-stretch">
                 <!-- left column split vertically -->
-                <div class="col-6 px-0 d-flex flex-column">
+                <div class="col-12 col-lg-6 px-0 d-flex flex-column">
                     <!-- first half -->
                     <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                     <div class="text-center px-5">
-                        <h2 class="mt-3">Concrete Coring</h2>
+                        <h2 class="mt-3 pt-5 pt-lg-0">Concrete Coring</h2>
                         <hr>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="pb-5 pb-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                     </div>
                     <!-- second half -->
                     <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                        <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                        <div class="d-flex justify-content-evenly">
-                            <button type="button" class="btn btn-lg btn-primary">Primary</button>
-                            <button type="button" class="btn btn-lg btn-secondary">Secondary</button>
+                        <p class="pb-3 pt-5 pt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        <div class="d-flex justify-content-evenly pb-5 pb-lg-3">
+                            <button type="button" class="btn btn-lg btn-primary CIK-button">Primary</button>
+                            <button type="button" class="btn btn-lg btn-secondary CIK-button">Secondary</button>
                         </div>
                     </div>
                 </div>
                 <!-- right image column (drives the row height) -->
-                <div class="col-6 px-0">
+                <div class="d-none d-lg-block col-6 px-0 align-content-center">
                     <img
                     src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
                     class="img-fluid w-100"
