fix: stop detail page box buttons going off-screen on smaller screens

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </span>
         </button>
     </div>
-    <section id="index-information" class="py-5 container-fluid oswald-font">
+    <section id="index-information" class="py-5 container-fluid oswald-font blue-gradient">
         <div class="row d-flex align-items-center">
             <div class="col-1"></div>
             <div class="col-10 col-lg-5 align-items-center">
