--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -24,8 +24,8 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <special-header></special-header>
-        <div class="row justify-content-center service-background py-5">
-            <div data-inviewport="fade-up" class="col-10 col-lg-9 col-xxl-6 service-box">
+        <div class="row justify-content-center service-background pt-5">
+            <div data-inviewport="fade-up" class="col-10 col-lg-9 col-xxl-7 service-box">
                 <div class="row align-items-stretch">
                 <!-- left column split vertically -->
                 <div class="col-12 col-lg-6 px-0 d-flex flex-column">
@@ -40,9 +40,12 @@
                     <!-- second half -->
                     <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
                         <p class="pb-3 pt-5 pt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                        <div class="d-flex justify-content-evenly pb-5 pb-lg-3">
-                            <button type="button" class="btn btn-lg btn-primary CIK-button">Primary</button>
-                            <button type="button" class="btn btn-lg btn-secondary CIK-button">Secondary</button>
+                        <div class="row justify-content-evenly pb-5 pb-lg-3">
+                            <div class="col-1"></div>
+                            <button type="button" class="col-12 col-md-4 btn btn-lg btn-primary CIK-button">Primary</button>
+                            <div class="col-1"></div>
+                            <button type="button" class="col-12 col-md-4 btn btn-lg btn-secondary CIK-button mt-3 mt-md-0">Secondary</button>
+                            <div class="col-1"></div>
                         </div>
                     </div>
                 </div>
@@ -55,6 +58,38 @@
                     />
                 </div>
                 </div>
+            </div>
+            <div class="row mt-5 p-5 service-box">
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Example select</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect2">Example multiple select</label>
+                        <select multiple class="form-control" id="exampleFormControlSelect2">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Example textarea</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                </form>
             </div>
         </div>
     <special-footer></special-footer>
