fix: remove animation from index page main title and text

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <div class="row d-flex align-items-center">
             <div class="col-1"></div>
             <div class="col-10 col-lg-5 align-items-center">
-                <h2 data-inviewport="fade-right" class="text-center">Lorem Ipsum Title Text</h2>
+                <h2 class="text-center">Lorem Ipsum Title Text</h2>
                 <hr />
-                <p data-inviewport="fade-right" class="text-center ">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                <p class="text-center ">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
