fix: make contact buttons on service details pages fully responsive

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link active p-3" aria-current="page" href="../index.html">Home</a>
+                        <a class="nav-link active p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
                     <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
