--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -36,13 +36,13 @@
             <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item mx-1">
-                        <a class="nav-link p-3" aria-current="page" href="../index.html">Home</a>
+                        <a class="nav-link p-3" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown mx-1 hover-underline-animation">
                     <a class="nav-link dropdown-toggle p-3 active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item active" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item active" href="/service-pages/intrusive-investigations.html">Concrete Coring</a></li>
                         <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
                         <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
                         <li><a class="dropdown-item" href="#">Pull Testing</a></li>
@@ -90,29 +90,33 @@
         <div class="col-10 col-lg-9 col-xxl-7 service-box">
             <div class="row align-items-stretch">
             <!-- left column split vertically -->
-            <div class="col-12 col-lg-6 px-0 d-flex flex-column">
+            <div class="col-12 col-xl-6 px-0 d-flex flex-column">
                 <!-- first half -->
                 <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
                 <div class="text-center px-5">
-                    <h2 class="mt-3 pt-5 pt-lg-0">Concrete Coring</h2>
+                    <h2 class="mt-3 pt-5 pt-xl-0">Concrete Coring</h2>
                     <hr>
-                    <p class="pb-5 pb-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="pb-5 pb-xl-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 </div>
                 <!-- second half -->
                 <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                    <p class="pb-3 pt-5 pt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <p class="pb-3 pt-5 pt-xl-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                     <div class="row justify-content-evenly pb-5 pb-lg-3">
                         <div class="col-1"></div>
-                        <button type="button" class="col-12 col-md-4 btn btn-lg btn-primary CIK-button">Primary</button>
+                        <button type="button" class="col-12 btn btn-lg btn-primary CIK-button">
+                            <i class="fa-solid fa-phone"></i>&ensp;CALL NOW
+                        </button>
                         <div class="col-1"></div>
-                        <button type="button" class="col-12 col-md-4 btn btn-lg btn-secondary CIK-button mt-3 mt-md-0">Secondary</button>
+                        <button type="button" class="col-12  btn btn-lg btn-secondary CIK-button mt-3">
+                            <i class="fa-solid fa-question"></i>&ensp;MAKE A QUERY
+                        </button>
                         <div class="col-1"></div>
                     </div>
                 </div>
             </div>
             <!-- right image column (drives the row height) -->
-            <div class="d-none d-lg-block col-6 px-0 align-content-center">
+            <div class="d-none d-xl-block col-6 px-0 align-content-center">
                 <img
                 src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
                 class="img-fluid w-100"
